<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
                name="commodityDetail"
                type="com.simpure.expires.data.entity.CommodityEntity" />

        <variable
                name="expirationDate"
                type="String" />
        <variable
                name="productionDate"
                type="String" />
        <variable
                name="amount"
                type="String" />

        <variable
                name="isPopup"
                type="Boolean" />

        <variable
                name="isEdit"
                type="Boolean" />

        <variable
                name="isEmpty"
                type="Boolean" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp20"
                android:paddingBottom="@dimen/dp20">


            <TextView
                    android:id="@+id/tvCommPropTitle"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:text="@string/details"
                    android:textColor="@color/line"
                    android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10">

            <ImageView
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginEnd="@dimen/dp20"
                    android:contentDescription="@string/ic_edit"
                    android:src="@mipmap/icons_detail_category_grey" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:text="@string/place"
                    android:textColor="@color/bg_comm_action"
                    android:textSize="17sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp40"
                    android:text="11 / 5 / 2020"
                    android:textColor="@color/bg_comm_action"
                    android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:visibility="gone">

            <ImageView
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:contentDescription="@string/ic_label"
                    android:layout_marginEnd="@dimen/dp20"
                    android:src="@mipmap/label" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:text="@string/label"
                    android:textColor="@color/bg_comm_action"
                    android:textSize="17sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp40"
                    android:text="Fridge"
                    android:textColor="@color/bg_comm_action"
                    android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</layout>
