<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
                android:id="@+id/rlSearch"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_rounded_rectangle_white_5">

            <ImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/ic_search"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/etSearch"
                    android:layout_marginStart="184dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/etSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparency"
                    android:text="@string/search"
                    android:textColor="@color/searchHint"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivSearch"
                    app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
                android:id="@+id/tvSearchCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/cancel" />

    </RelativeLayout>
</layout>
