<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
                name="commodityDetail"
                type="com.simpure.expires.data.entity.CommodityEntity" />

        <variable
                name="isPopup"
                type="Boolean" />

        <variable
                name="isEdit"
                type="Boolean" />

        <variable
                name="isEmpty"
                type="Boolean" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/layoutConsume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp20"
                android:paddingBottom="@dimen/dp20">


            <TextView
                    android:id="@+id/tvCommPropTitle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp48"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:text="@string/inventories"
                    android:textColor="@color/line"
                    android:textSize="20sp" />

            <ImageView
                    android:id="@+id/ivInventoriesTopping"
                    android:layout_width="@dimen/dp72"
                    android:layout_height="@dimen/dp44"
                    android:layout_marginStart="@dimen/dp20"
                    android:background="@drawable/bg_rounded_rectangle_light_gray"
                    android:contentDescription="@string/ic_top_inventories"
                    android:visibility="@{isEdit ? View.GONE : View.VISIBLE}"
                    app:srcCompat="@mipmap/icons_detail_up_theme" />

            <TextView
                    android:id="@+id/tvInventoriesThrow"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp44"
                    android:layout_marginStart="@dimen/dp20"
                    android:background="@drawable/bg_rounded_rectangle_light_gray"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:paddingStart="@dimen/dp20"
                    android:paddingEnd="@dimen/dp20"
                    android:text="@string/throw_inventories"
                    android:textColor="@color/green"
                    android:visibility="@{isEdit ? View.GONE : View.VISIBLE}" />

            <ImageView
                    android:id="@+id/ivEditInventories"
                    android:layout_width="@dimen/dp72"
                    android:layout_height="@dimen/dp44"
                    android:layout_marginStart="@dimen/dp20"
                    android:contentDescription="@string/ic_edit"
                    android:src="@mipmap/icons_detail_button_edit_theme"
                    android:visibility="@{isEdit ? View.VISIBLE : View.GONE}" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvInventories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </LinearLayout>

</layout>
