<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.simpure.expires.data.entity.CommodityEntity" />


        <variable
                name="commodityDetail"
                type="CommodityEntity" />

        <variable
                name="isPopup"
                type="Boolean" />

        <variable
                name="isEdit"
                type="Boolean" />

        <variable
                name="isEmpty"
                type="Boolean" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">


            <TextView
                    android:id="@+id/tvCommPropTitle"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:text="@string/remind_me"
                    android:textColor="@color/line"
                    android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/ic_before"
                    app:srcCompat="@mipmap/icons_detail_remind_before_grey" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/before"
                    android:textColor="@color/bg_comm_action"
                    android:textSize="17sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="5days"
                    android:textColor="@color/bg_comm_action"
                    android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</layout>
