<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
                name="isSearching"
                type="Boolean" />

        <variable
                name="historyLabels"
                type="java.util.List" />

    </data>

    <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/appBg"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp184"
                android:paddingStart="@dimen/dp28"
                android:paddingEnd="@dimen/dp28"
                android:paddingBottom="@dimen/dp16">

            <ImageView
                    android:id="@+id/tvDone"
                    android:layout_width="@dimen/dp48"
                    android:layout_height="@dimen/dp48"
                    android:layout_above="@id/tvExpires"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="@dimen/dp8"
                    android:contentDescription="@string/ic_back"
                    android:src="@mipmap/icons_back_theme" />

            <TextView
                    android:id="@+id/tvExpires"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="bottom"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="32sp" />
        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp28"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp28"
                android:layout_marginBottom="@dimen/dp10"
                android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clSearch"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp72"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_rectangle_white_5">

                <ImageView
                        android:id="@+id/ivSearch"
                        android:layout_width="@dimen/dp24"
                        android:layout_height="@dimen/dp24"
                        android:contentDescription="@string/ic_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/etSearch"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_search" />

                <EditText
                        android:id="@+id/etSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp16"
                        android:background="@null"
                        android:hint="@string/search"
                        android:imeOptions="actionDone"
                        android:includeFontPadding="false"
                        android:textColor="@color/text_expires_days"
                        android:textColorHint="@color/bg_comm_action"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/ivSearch"
                        app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                    android:id="@+id/tvSearchCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp22"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/green_expires"
                    android:visibility="@{isSearching? View.VISIBLE : View.GONE}" />
        </LinearLayout>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp40"
                    android:paddingStart="@dimen/dp28"
                    android:paddingEnd="@dimen/dp28">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <include
                            android:id="@+id/itemScanBarcode"
                            layout="@layout/item_scan_barcode" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp40"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/history"
                                android:textColor="@color/text_expires_days"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp1"
                                android:layout_marginTop="@dimen/dp4"
                                android:layout_marginBottom="@dimen/dp24"
                                android:background="@color/line" />

                        <GridView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="@dimen/dp56" />

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp60"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/labels"
                                android:textColor="@color/text_expires_days"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp1"
                                android:layout_marginTop="@dimen/dp4"
                                android:layout_marginBottom="@dimen/dp24"
                                android:background="@color/line" />

                        <GridView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="@dimen/dp56" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.core.widget.NestedScrollView>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black_50"
                    android:visibility="@{isSearching? View.VISIBLE: View.GONE}" />
        </RelativeLayout>

    </LinearLayout>
</layout>
